2004-02-13  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array.cc (maybe_delete_elements_2): Allow X(n) = [] for 2-d X.
	(Array<T>assign2): Also call maybe_delete_elements for single
	index when rows and columns or LHS are both greater than 1.

2004-02-13  Petter Risholm  <risholm@stud.ntnu.no>

	* Array.cc (Array<T>::maybe_delete_elements):
	Check for index out of bounds.	Handle one index.

	* Array.cc (Array<T>::indexN): Use dim_vector (0, 0) instead of
	dim_vector (0) to create empty return vector.

2004-02-07  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array.cc (Array<T>::assignN): Don't crash if trying to resize a
	non-empty LHS when the number of lhs dimensions is less than the
	number of indices.  Detect error if attempting to resize non-empty
	LHS with colon indices.

2004-02-06  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array.cc (Array<T>::resize_and_fill): Don't bother to assign any
	values unless the length of the new array is greater than 0.
	(Array<T>::resize_no_fill): Likewise.

	* Array-util.cc (index_in_bounds): Also return false if ra_idx(i)
	is equal to dimensions(i).

	* Array-util.h, Array-util.cc (equal_arrays, any_zero_len,
	get_zero_len_size, number_of_elements):
	Delete unused functions.

	* Array-util.cc (get_ra_idx): Use dim_vector::numel instead of
	number_of_elements function.
	* Array.cc (Array<T>::indexN): Likewise.

	* Array.cc (Array<T>::indexN): Use dim_vector::operator == instead
	of equal_arrays function.
	(Array<T>::index, Array<T>::indexN, Array<T>::assignN) Use
	dim_vector::any_zero instead of any_zero_len function.

	* Array.cc (Array<T>::assignN): Eliminate special case for empty index.
	Don't skip reshaping and resizing if RHS is empty.

	* Array.cc (Array<T>::assignN): Simplify loop for array	assignment.
	Move body of MAYBE_RESIZE_ND_DIMS here since it is only used once.  
	Delete unused variables is_colon and is_colon_equiv.
	Correctly resize for expressions like x(:,:,2) = ones(3,3) when
	LHS is not yet defined.