@@ -87,6 +87,7 @@ public:
   ComplexNDArray prod (int dim = -1) const;
   ComplexNDArray sum (int dim = -1) const;
   ComplexNDArray sumsq (int dim = -1) const;
+  bool cat (ComplexNDArray& cat_array, int dim, int add_dim) const;
 
   NDArray abs (void) const;
 
